Version 200

Ported to PLT Scheme 200
COM cleanup at shutdown now gets all objects
In the demo (plt/collects/mxdemo.ss), the 
 mx-browser% object is instantiated using by-name
 arguments

Version 103-p3

Browser windows get reclaimed when browsers are 
 shutdown by a custodian in DrScheme (was fixed 
 in 103-p1, broken again in 103-p2)
The first HTML event is received properly after 
 a custodian shutdown in DrScheme (PR 1893)

Version 103-p2

Added support for paths of property names in
 com-get-property and com-set-property!
Fixed typechecking of values supplied to
 com-set-property!
Removed right-click context menu from browser 
 windows, because Language option caused errors
Added navigate/status, refresh, iconize, restore, and 
 print methods to mx-browser%
Fixed and documented keycode, alt-key, ctrl-key, 
 and shift-key attributes of key-{down,up,pressed}
 HTML events
Increased size of HTML event queue to 8192 from 50
Changed browser Windows event loop to use blocking 

Version 103-p1:

Added optional index argument to 
 find-element, find-element-by-id-or-name
 methods of mx-document%
Added methods get-html, get-text to
 mx-element% class
Added title method to mx-document% class
Methods find-element, find-element-by-id-or-name,
 and find-elements-with-tag can return the BODY
 element itself, as well as its children
When a custodian shuts down an mx-browser% object,
 its Win32 window is destroyed
Fixed marshalling of BYREF parameters to COM event 
 handlers, for several types; added VT_INT and 
 VT_INT | VT_BYREF 
Added com-add-ref, com-ref-count procedures
Secondary Windows event loop checks for
 WM_TIMER messages; some programs were blocking
 on these when run from DrScheme

Version 103:

Added support for VT_INT 
Added conversions com-scode->number,
 number->com-scode, com-currency->number,
 number->com-currency, com-date->date,
 date->com-date
Added predicates com-scode?, com-currency?,
 com-date?
Removed 'no-caption option for mx-browser%,